--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<a href="https://styleminions.co" target="_blank">
+									<a href="http://sew.mochanow.com" target="_blank">
 										<div class="tint-action">
-											<h2 class="major">Style Minions</h2>
-											<h3>New Fashion search engine.</h3>
+											<h2 class="major">Conference Engagement App</h2>
+											<h3>Real time engagement app for professional and academic conferences.</h3>
 										</div>
 									</a>									
 								</div>
 								<div class="image filtered tinted" data-position="top left">
-									<img src="https://drive.google.com/uc?id=1ZszKhmGEYIMQXCjWkSIZ1POyPPzOOkW2" alt="" />
+									<img src="https://drive.google.com/uc?id=1mg46_8aVEVsbl_kifAde4AxtB_EK0VZ5" alt="" />
 								</div>
 							</section>
 
@@ -57,7 +57,7 @@
 									<a href="http://celebritypuzzle.com" target="_blank">
 										<div class="tint-action">
 											<h2 class="major">CelebrityPuzzle.com</h2>
-											<h3>Celebrity gaming platform.</h3>
+											<h3>Celebrity instagram gaming platform.</h3>
 										</div>
 									</a>
 								</div>
@@ -78,6 +78,21 @@
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="https://drive.google.com/uc?id=1j_sN2L1z8C-_QBOMkUYGCLN5Kn31PonD" alt="" />
+								</div>
+							</section>
+						
+							<!-- Panel (Spotlight) -->
+							<section class="panel spotlight medium right" id="first">
+								<div class="content span-7">
+									<a href="http://twistedlovebox.com" target="_blank">
+										<div class="tint-action">
+											<h2 class="major">TwistedLoveBox</h2>
+											<h3>Gift sharing platform for friends and family.</h3>
+										</div>
+									</a>
+								</div>
+								<div class="image filtered tinted" data-position="top left">
+									<img src="https://drive.google.com/uc?id=17bNbwBldWCeETYeBVWf8W2nozF05AiLh" alt="" />
 								</div>
 							</section>
 
