--- a/index.html
+++ b/index.html
@@ -24,30 +24,15 @@
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, I'm Ida Hoo</h1>
-									<h3>Software Engineer</h3>
+									<h3>Software Developer</h3>
 									<h3>Services: Consulting, Solution Strategy & Software Prototyping.</h3>
-									<p>I help companies bring their vision to life</p>
+									<p>I help companies build experiences.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
 									<img src="https://scontent-yyz1-1.cdninstagram.com/vp/a750cd6c097893869a7c4d9b8efe056b/5B842178/t51.2885-15/e35/27881318_358880984580564_5027765600907165696_n.jpg" alt="" />
-								</div>
-							</section>
-
-						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight medium right" id="first">
-								<div class="content span-7">
-									<a href="http://sew.mochanow.com" target="_blank">
-										<div class="tint-action">
-											<h2 class="major">Conference Engagement App</h2>
-											<h3>Real time engagement app for professional and academic conferences.</h3>
-										</div>
-									</a>									
-								</div>
-								<div class="image filtered tinted" data-position="top left">
-									<img src="https://drive.google.com/uc?id=1mg46_8aVEVsbl_kifAde4AxtB_EK0VZ5" alt="" />
 								</div>
 							</section>
 
@@ -63,6 +48,36 @@
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="https://drive.google.com/uc?id=1YXh_5QKqO1d26Jd1uc2e2OHWoDTJI6P7" alt="" />
+								</div>
+							</section>
+						
+						<!-- Panel (Spotlight) -->
+							<section class="panel spotlight medium right" id="first">
+								<div class="content span-7">
+									<a href="http://blessmyrequest.com" target="_blank">
+										<div class="tint-action">
+											<h2 class="major">BlessMyRequest.com</h2>
+											<h3>Realtime song request platform (Radio/Clubs).</h3>
+										</div>
+									</a>
+								</div>
+								<div class="image filtered tinted" data-position="top left">
+									<img src="https://drive.google.com/uc?id=1NwC8noQPFDYmyMf0VlCVMd_rOc_sLHwQ" alt="" />
+								</div>
+							</section>
+						
+						<!-- Panel (Spotlight) -->
+							<section class="panel spotlight medium right" id="first">
+								<div class="content span-7">
+									<a href="http://ama.mochanow.com" target="_blank">
+										<div class="tint-action">
+											<h2 class="major">Conference Engagement App</h2>
+											<h3>Real time engagement app for professional and academic conferences.</h3>
+										</div>
+									</a>									
+								</div>
+								<div class="image filtered tinted" data-position="top left">
+									<img src="https://drive.google.com/uc?id=1mg46_8aVEVsbl_kifAde4AxtB_EK0VZ5" alt="" />
 								</div>
 							</section>
 
