change instagram img source to google drive

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
-									<img src="https://scontent-yyz1-1.cdninstagram.com/vp/a750cd6c097893869a7c4d9b8efe056b/5B842178/t51.2885-15/e35/27881318_358880984580564_5027765600907165696_n.jpg" alt="" />
+									<img src="https://drive.google.com/uc?id=1iwoK-KA_jADzONOsbqqawPLrkcISWR5S" alt="" />
 								</div>
 							</section>
 
