Remove conference engagement app

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							</section>
 						
 						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight medium right" id="first">
+							<!-- <section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<a href="http://ama.mochanow.com" target="_blank">
 										<div class="tint-action">
@@ -79,12 +79,12 @@
 								<div class="image filtered tinted" data-position="top left">
 									<img src="https://drive.google.com/uc?id=1mg46_8aVEVsbl_kifAde4AxtB_EK0VZ5" alt="" />
 								</div>
-							</section>
+							</section> -->
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<a href="https://mochanow.com" target="_blank">
+									<a href="https://playmocha.herokuapp.com" target="_blank">
 										<div class="tint-action">
 											<h2 class="major">MochaX</h2>
 											<h3>Software solutions for brand engagement & customer data mining.</h3>
